[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
fastrand = "1.7.0"

[dependencies.serde]
version = "1.0.139"
default-features = false
features = ["derive"]

[dependencies.bincode]
version = "1.3.3"
default-features = false

[dependencies.utils]
version = "0.1.0"
path = "utils"
features = ["log", "dev"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
]

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
