[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.utils]
version = "0.1.0"
path = "utils"
features = ["log", "dev"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
]

[dependencies.libloading]
version = "0.7.3"
default-features = false
optional = true

[features]
default = []
plugin = ["libloading"]

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
