[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

[dependencies.utils]
version = "0.1.0"
path = "utils"
features = ["log", "dev"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
]

[dependencies.libloading]
version = "0.7.3"
default-features = false
optional = true

[features]
default = []
plugin = ["libloading"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.3.0"

[dev-dependencies.criterion]
version = "0.3.6"
default-features = false