[package]
name = "memscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = { version = "2", default-features = false }
pbar = {path = "../pbar", version = "0.1.0"}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true