[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
log = ["time"]
dev = []
release = []
clean = []

print = []
slice = []
time = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
